# task-watchdog

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  WORKSPACE_ARCHITECTURE.md
.github/: copilot-instructions.md
crates/task-watchdog-core/: Cargo.toml
crates/task-watchdog-core/src/: lib.rs
crates/task-watchdog-esp32/: Cargo.toml
crates/task-watchdog-esp32/.cargo/: config.toml
crates/task-watchdog-esp32/examples/: Cargo.toml  embassy.rs
crates/task-watchdog-esp32/src/: lib.rs
crates/task-watchdog-nrf/: Cargo.toml
crates/task-watchdog-nrf/examples/: Cargo.toml  embassy.rs
crates/task-watchdog-nrf/src/: lib.rs
crates/task-watchdog-rp/: Cargo.toml
crates/task-watchdog-rp/examples/: Cargo.toml  embassy.rs  sync.rs
crates/task-watchdog-rp/src/: lib.rs
crates/task-watchdog-stm32/: Cargo.toml
crates/task-watchdog-stm32/examples/: Cargo.toml  embassy.rs
crates/task-watchdog-stm32/src/: lib.rs
examples/: Cargo.toml  build.rs
scripts/: README.md  build-examples.sh  build-lib.sh  flash-async-esp32.sh  flash-async-nrf52840.sh  flash-async-pico.sh  flash-async-pico2.sh  flash-async-stm32f103c8.sh  flash-sync-pico.sh  flash-sync-pico2.sh
