[workspace]
members = [
    "crates/task-watchdog-core",
]
exclude = [
    "crates/task-watchdog-rp",
    "crates/task-watchdog-stm32",
    "crates/task-watchdog-nrf",
    "crates/task-watchdog-esp32",
]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks"]
license = "MIT OR Apache-2.0"

# Workspace-wide profiles
[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
