[package]
name = "task-watchdog-examples"
version = "0.1.0"
edition = "2021"

[workspace]

[features]
default = ["rp2040-embassy"]

# RP2040 Embassy features
rp2040-embassy = ["dep:task-watchdog-rp", "task-watchdog-rp/rp2040-embassy", "embassy-time/tick-hz-1_000_000", "rp2040-memory-x", "dep:panic-probe"]
rp2040-embassy-defmt = ["rp2040-embassy", "task-watchdog-rp/defmt", "defmt", "panic-probe/print-defmt"]

# RP2040 HAL (synchronous) features
rp2040-hal = ["dep:task-watchdog-rp", "task-watchdog-rp/rp2040-hal", "dep:rp2040-hal", "dep:rp2040-boot2", "rp2040-hal-memory-x", "dep:cortex-m", "cortex-m/critical-section-single-core", "dep:panic-probe", "panic-probe/print-defmt"]
rp2040-hal-defmt = ["rp2040-hal", "task-watchdog-rp/defmt", "defmt"]

# RP2350 Embassy features
rp2350-embassy = ["dep:task-watchdog-rp", "task-watchdog-rp/rp2350-embassy", "embassy-time/tick-hz-1_000_000", "rp2350-memory-x", "dep:panic-probe"]
rp2350-embassy-defmt = ["rp2350-embassy", "task-watchdog-rp/defmt", "defmt", "panic-probe/print-defmt"]

# RP2350 HAL (synchronous) features
rp2350-hal = ["dep:task-watchdog-rp", "task-watchdog-rp/rp2350-hal", "dep:rp235x-hal", "rp2350-memory-x", "dep:cortex-m", "cortex-m/critical-section-single-core", "dep:panic-probe", "panic-probe/print-defmt"]
rp2350-hal-defmt = ["rp2350-hal", "task-watchdog-rp/defmt", "defmt"]

# STM32 Embassy features
stm32-embassy = ["dep:task-watchdog-stm32", "embassy-time/tick-hz-32_768", "dep:cortex-m", "cortex-m/critical-section-single-core", "dep:panic-probe"]
stm32-embassy-defmt = ["stm32-embassy", "task-watchdog-stm32/defmt", "defmt", "panic-probe/print-defmt"]

# nRF52840 Embassy features
nrf-embassy = ["dep:task-watchdog-nrf", "nrf52840-memory-x", "dep:cortex-m", "cortex-m/critical-section-single-core", "dep:panic-probe"]
nrf-embassy-defmt = ["nrf-embassy", "task-watchdog-nrf/defmt", "defmt", "panic-probe/print-defmt"]

# Shared utility features
alloc = []
defmt = ["dep:defmt", "dep:defmt-rtt", "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime"]

# Memory layout markers (for embedded linker)
rp2040-memory-x = []
rp2040-hal-memory-x = []
rp2350-memory-x = []
nrf52840-memory-x = []

[[bin]]
name = "intro"
path = "src/bin/intro.rs"
test = false

[[bin]]
name = "embassy"
path = "src/bin/embassy.rs"
test = false

[[bin]]
name = "rp-sync"
path = "src/bin/rp-sync.rs"
test = false

[dependencies]
task-watchdog-core = { path = "../crates/task-watchdog-core" }
task-watchdog-rp = { path = "../crates/task-watchdog-rp", optional = true }
task-watchdog-stm32 = { path = "../crates/task-watchdog-stm32", optional = true }
task-watchdog-nrf = { path = "../crates/task-watchdog-nrf", optional = true }

embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4" }
portable-atomic = { version = "1.10", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
panic-probe = { version = "0.3", optional = true }
static_cell = "2.1"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
embedded-alloc = "0.6"
rp2040-hal = { version = "0.11", optional = true }
rp2040-boot2 = { version = "0.3", optional = true }
rp235x-hal = { version = "0.3", optional = true }