[package]
name = "task-watchdog-stm32"
version = "0.1.2"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks"]
license = "MIT OR Apache-2.0"
description = "STM32 implementations of task-watchdog using Embassy"
documentation = "https://docs.rs/task-watchdog-stm32"
repository = "https://github.com/piersfinlayson/task-watchdog"
keywords = ["embedded", "watchdog", "stm32", "embassy"]
categories = ["embedded", "no-std"]

[features]
default = []

alloc = ["task-watchdog-core/alloc"]
defmt = ["task-watchdog-core/defmt", "dep:defmt", "embassy-stm32/defmt", "embassy-executor/executor-thread", "embassy-executor/executor-interrupt", "embassy-executor/defmt", "embassy-sync/defmt", "embassy-time/defmt"]

[dependencies]
task-watchdog-core = { path = "../task-watchdog-core", version = "0.1.2" }
defmt = { version = "^1.0.1", optional = true }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0" }
embassy-executor = { version = "0.9.1" }
embassy-stm32 = { version = "0.5.0" }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.5" }

[lib]
name = "task_watchdog_stm32"
path = "src/lib.rs"
test = false

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2
